# agentops

./: .gitignore  README.md  pyproject.toml
docs/: README.md  mint.json  package.json
examples/: gemini_analyzer.py
gemini/: __init__.py  api.py  cleanup_analysis.py  cli.py  core.py  gemini_multi_agent_core.py  use_multi_agent.py
tests/: test_gemini_api.py  test_gemini_cli.py  test_gemini_system.py
